--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="button" id="start" value="Start"></input>
                 </div>
                 <!-- all questions -->
-                <div class="row" id='div1'>
+                <div id='div1'>
                     
                 </div>
                 <div id="result" class='result'>
